# wcpy

./: .pre-commit-config.yaml  README.md  pyproject.toml
tests/: file_2.txt  test_cli.py
wcpy/: cli.py  wcpy.py
