[tool.poetry]
name = "wcpy"
version = "0.1.0"
description = "wc command made with Python."
authors = ["TinySquid <tinysquid.git@pm.me>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/TinySquid/wcpy"
documentation = "https://github.com/TinySquid/wcpy"

[tool.poetry.scripts]
wcpy = "wcpy.cli:cli"

[tool.poetry.dependencies]
python = "^3.12.4"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.1.0"
pre-commit = "^3.7.1"
pytest = "^8.2.2"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/TinySquid/wcpy/issues"
